--- a/seq2seq_eg.ipynb
+++ b/seq2seq_eg.ipynb
@@ -1719,36 +1719,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    ""
+    "def source_to_seq(text):\n",
+    "    '''\n",
+    "    对源数据进行转换\n",
+    "    '''\n",
+    "    sequence_length = 7\n",
+    "    return [source_letter_to_int.get(word, source_letter_to_int['<UNK>']) for word in text] + [source_letter_to_int['<PAD>']]*(sequence_length-len(text))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'source_to_seq' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-43-09983a0ff181>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 输入一个单词\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0minput_word\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'hello'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msource_to_seq\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_word\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcheckpoint\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"./trained_model.ckpt.ckpt\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'source_to_seq' is not defined"
-     ],
-     "output_type": "error"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Restoring parameters from ./trained_model.ckpt\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "原始输入: ilovedog\n\nSource\n  Word 编号:    [29, 21, 12, 15, 23, 8, 12, 13]\n  Input Words: i l o v e d o g\n\nTarget\n  Word 编号:       [8, 23, 13, 29, 21, 12, 12, 15]\n  Response Words: d e g i l o o v\n"
+     ]
     }
    ],
    "source": [
     "# 输入一个单词\n",
-    "input_word = 'hello'\n",
+    "input_word = 'ilovedog'\n",
     "text = source_to_seq(input_word)\n",
     "\n",
-    "checkpoint = \"./trained_model.ckpt.ckpt\"\n",
+    "checkpoint = \"./trained_model.ckpt\"\n",
     "\n",
     "loaded_graph = tf.Graph()\n",
     "with tf.Session(graph=loaded_graph) as sess:\n",
